--- a/src/about.html
+++ b/src/about.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="pl">
 	<head>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8">
     <title>AUTO KOMPLEX Warsztat Samochodowy</title>
-    <meta name="description" content="Warsztat samochodowy we Wrocławiu (Ołtaszyn/Krzyki). Blacharstwo, lakiernictwo i mechanika pojazdowa. Likwidacja szkód komunikacyjnych OC i AC. Auto holowanie.">
-    <meta name="keywords" content="watsztat samochodowy, blacharstwo, lakiernictwo, mechanika, ołtaszyn, wrocław, holowanie, likwidacja szkody, oc i ac, wymiana oleju, rozrząd, cheack engine, naprawa pojazdów, mechanik">
+    <meta name="description" content="Warsztat samochodowy w Mirkowie. Blacharstwo, lakiernictwo i mechanika pojazdowa. Likwidacja szkód komunikacyjnych OC i AC. Auto holowanie.">
+    <meta name="keywords" content="watsztat samochodowy, blacharstwo, lakiernictwo, mechanika, mirków, holowanie, likwidacja szkody, oc i ac, wymiana oleju, rozrząd, cheack engine, naprawa pojazdów, mechanik">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="images/png" href="images/icon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
@@ -84,7 +84,7 @@
               <h2 class="mb-4">Auto Komplex</h2>
               <p>Jesteśmy firmą stworzoną przez pasjonatów motoryzacji którzy wiedzą dokładnie czego kierowcy oczekują. Oferujemy kompleksowe usługi motoryzacyjne dla posiadaczy samochodów osobowych.</p>
               <p>Posiadamy duże doświadczenie w naprawach blacharsko-lakierniczych i mechanicznych.
-                Jeżeli masz problem ze swoim samochodem lub chcesz sprawdzić stan pojazdu przed zakupem, zadzwoń i umów się na przegląd. Firma umiejscowiona pod adresem ul. Gałczyńskiego 14, we Wrocławiu (Ołtaszyn).
+                Jeżeli masz problem ze swoim samochodem lub chcesz sprawdzić stan pojazdu przed zakupem, zadzwoń i umów się na przegląd. Firma umiejscowiona pod adresem ul. Rzemieślnicza 6, w Mirkowie.
                 </p>
               <p>Diagnozujemy i naprawiamy samochody wszystkich marek a na życzenie klienta dojeżdżamy pod wskazany adres. Jesteśmy terminowi i rzetelni w tym co robimy, a nasza praca jest jednocześnie naszą pasją. Posiadamy niezbędną wiedzę, doświadczenie oraz sprzęt do naprawy każdej usterki w Twoim samochodzie. Wymieniamy oleje, płyny, filtry, naprawiamy układy kierownicze, zawieszenia, układy hamulcowe, rozrządy, układy napędowe, silniki, skrzynie biegów, rozruszniki, alternatory, układy zapłonowe itp.</p>
               <p><a href="contact.html" class="primary-btn">KONTAKT</a></p>
@@ -116,8 +116,8 @@
             <div class="single-footer-widget footer-address">
               <h6>Adres</h6>
               <p><span>AUTO KOMPLEX</span></p>
-              <p>ul. Gałczyńskiego 14</p>
-              <p>52-214 Wrocław</p>
+              <p>ul. Rzemieślnicza 6</p>
+              <p>55-095 Mirków</p>
               <p>woj. dolnośląskie</p>
               <p>Polska</p>
             </div>
